[tool.poetry]
name = "repl_python3_beta_Jupyter"
version = "0.1.0"
description = ""
authors = ["SeifHafri <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
plotly = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
